deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-getssl
  labels:
    app: test-getssl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-getssl
  template:
    metadata:
      labels:
        app: test-getssl
    spec:
      nodeSelector:
        karpenter.sh/provisioner-name: spondemand-amd64
      containers:
        - name: test-getssl
          image: 063150541913.dkr.ecr.ap-northeast-1.amazonaws.com/test-getssl@sha256:7aa09061a8d52b8327e09688b1eeeeb75a641cd3b9199275aad2cee7ab25cae4
          imagePullPolicy: IfNotPresent
          workingDir: /root
          command:
            - ./create-cert.sh
            - test-getssl.rhems-labs.org
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: test-conf
              mountPath: /etc/nginx/conf.d/test.conf
              subPath: test.conf
            - name: index-html
              mountPath: /var/www/html/index.html
              subPath: index.html
            - name: create-cert-sh
              mountPath: /root/create-cert.sh
              subPath: create-cert.sh
            - name: root
              mountPath: /root
            - name: acme-challenge
              mountPath: /var/www/html/.well-known/acme-challenge
      volumes:
        - name: test-conf
          configMap:
            name: test-conf
            defaultMode: 0755
        - name: index-html
          configMap:
            name: index-html
            defaultMode: 0755
        - name: create-cert-sh
          configMap:
            name: create-cert-sh
            defaultMode: 0755
        - name: init-sh
          configMap:
            name: init-sh
            defaultMode: 0755
        - name: acme-challenge
          emptyDir: {}
        - name: root
          emptyDir: {}
