go.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-getssl-go
  labels:
    app: test-getssl-go
spec:
  selector:
    matchLabels:
      app: test-getssl-go
  template:
    metadata:
      labels:
        app: test-getssl-go
    spec:
      nodeSelector:
        karpenter.sh/provisioner-name: spondemand-amd64
      containers:
        - name: test-getssl-go
          image: golang:1.23.1-alpine3.19
          imagePullPolicy: IfNotPresent
          workingDir: /root
          command: ["go", "run", "/root/server.go"]
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: server-go
              mountPath: /root/server.go
              subPath: server.go
            - name: acme-challenge
              mountPath: /root/acme-challenge
      volumes:
        - name: server-go
          configMap:
            name: server-go
            defaultMode: 0755
        - name: acme-challenge
          configMap:
            name: acme-challenge
            defaultMode: 0755
