svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test-getssl-svc
  labels:
    app: test-getssl
spec:
  type: NodePort
  selector:
    app: test-getssl
  ports:
    - targetPort: 80
      port: 80
